# programming_project

./: .gitignore  CMakeLists.txt  cleaner.sh  main.cpp  tests.cpp
Eigen/src/Core/arch/SYCL/: SyclMemoryModel.h
Preprocess/: Mesh_1D.cpp  Mesh_1D.hpp
Problem/: Problem.cpp  old_Problem.cpp  problem.cpp  problem.hpp
element/: element.cpp  element.hpp
initialization/: Initialize.cpp  Initialize.hpp
node/: node.cpp  node.hpp
postprocess/: postprocess.hpp  postprocess_1D.hpp  postprocess_2D.hpp  postprocess_3D.hpp
preprocess/: mesh.cpp  mesh.hpp  mesh_1D.cpp  mesh_1D.hpp  mesh_2D.cpp  mesh_2D.hpp  mesh_3D.cpp  mesh_3D.hpp
utils/: NaturalElement.cpp  NaturalElement.h  utils.cpp  utils.hpp
